plugins {
    id 'java'
    id("io.freefair.lombok") version "8.14.2"
}

group = 'io.ib67'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven {
        name "kalculosSnapshots"
        url "https://repo.sfclub.cc/snapshots"
    }
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(24))
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.ow2.asm:asm:9.8'
    implementation 'io.ib67.kiwi:lang:1.2.2-SNAPSHOT'
//    log4j-core = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j" }
//    log4j-api = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j" }
//    log4j-layout-json = { module = "org.apache.logging.log4j:log4j-layout-template-json", version.ref = "log4j" }
    implementation 'org.apache.logging.log4j:log4j-core:2.25.1'
}

test {
    useJUnitPlatform()
}